--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -25,7 +25,18 @@ a {
     padding-left: 0%; 
  }   
 }
-
+.shows {
+  min-width: 320px;
+  &-header__image {
+      background: url(/assets/images/hero-shows.jpg);
+      position: relative;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-bottom: 0px;
+      min-height: 300px;
+}
+}
 .contact-info {
     background-color: #323232;
     color: #FFFFFF;
