--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -39,7 +39,7 @@ li {
       background-repeat: no-repeat;
       background-position: center;
       margin-bottom: 0px;
-      height: 300px;
+      height: 320px;
 }
 &-header__image--text {
   // padding-top: 148px;
@@ -50,12 +50,34 @@ li {
     font-weight: 600;
     font-size: 24px;
 }
+&-list__headerText {
+  font-size: 24px;
+  font-weight: 700;
+}
 &-header__image--subText {
   color: #FFFFFF;
   font-size: 14px;
   padding-top: 40px;
+  padding-left: 16px;
 }
-
+&-list__section {
+  margin-bottom: 30px;
+}
+&-lists__label {
+  padding-bottom: 10px;
+  color: #AFAFAF;
+  font-size: 13px;
+}
+&-lists__button {
+  background-color: #323232;
+  color: #FFFFFF;
+}
+button:hover {
+  background-color: #000000;
+}
+&-lists__date {
+  font-weight: 700;
+}
 }
 .contact-info {
     background-color: #323232;
